src/test/ui/reserved/reserved-attr-on-macro.stderr
error[E0658]: unless otherwise specified, attributes with the prefix `rustc_` are reserved for internal compiler diagnostics
  --> $DIR/reserved-attr-on-macro.rs:1:3
   |
LL | #[rustc_attribute_should_be_reserved]
   |   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: for more information, see https://github.com/rust-lang/rust/issues/29642
   = help: add #![feature(rustc_attrs)] to the crate attributes to enable

error: cannot determine resolution for the macro `foo`
  --> $DIR/reserved-attr-on-macro.rs:8:5
   |
LL |     foo!();
   |     ^^^
   |
   = note: import resolution is stuck, try simplifying macro imports

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0658`.
